--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -33,38 +33,40 @@ const {
     <style>
       @font-face {
         font-family: 'PP Neue Machina';
-        src: url('/fonts/PPNeueMachina-PlainRegular.otf') format('opentype');
+        src: url('/fonts/PPNeueMachina-PlainRegular.woff2') format('woff2');
         font-weight: 400;
         font-style: normal;
+        font-display: swap;
       }
       @font-face {
         font-family: 'PP Neue Machina';
-        src: url('/fonts/PPNeueMachina-PlainUltrabold.otf') format('opentype');
+        src: url('/fonts/PPNeueMachina-PlainUltrabold.woff2') format('woff2');
         font-weight: 800;
         font-style: normal;
+        font-display: swap;
       }
       @font-face {
         font-family: 'PP Supply Mono';
-        src: url('/fonts/PPSupplyMono-Regular.otf') format('opentype');
+        src: url('/fonts/PPSupplyMono-Regular.woff2') format('woff2');
         font-weight: 400;
         font-style: normal;
+        font-display: swap;
       }
       @font-face {
         font-family: 'PP Supply Mono';
-        src: url('/fonts/PPSupplyMono-Ultralight.otf') format('opentype');
+        src: url('/fonts/PPSupplyMono-Ultralight.woff2') format('woff2');
         font-weight: 200;
         font-style: normal;
+        font-display: swap;
       }
       @font-face {
         font-family: 'PP Supply Sans';
-        src: url('/fonts/PPSupplySans-Regular.otf') format('opentype');
+        src: url('/fonts/PPSupplySans-Regular.woff2') format('woff2');
         font-weight: 400;
         font-style: normal;
+        font-display: swap;
       }
     </style>
-
-    <!-- html2canvas for WebGL transitions -->
-    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   </head>
   <body>
     <slot />
